Fixed blurry images by replacing with svg

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     height: 100vh;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
-    padding: 0 20px;
     overflow: hidden;
 }
 
@@ -22,6 +21,6 @@ p {
 }
 
 img {
-    width: 100%;
+    width: 70%;
     margin-bottom: 25px;
 }
